# ffi_python_lecture

./: README.md
CPPYY/: main.py  myclass.h
CTypes/: ctypes_sample.py  multiply.c
Cython/Issues/: issues.pyx  setup.py  test.py
Cython/Optimization/: perfomance.py  setup.py  setup_numpy.py  solution_cython.pyx  solution_cython_numpy.pyx
Cython/PerformanceCompare/: main.py  use_cython_example.py  utils.py
Cython/PerformanceCompare/cython_code/: cython_clean_example.pyx  setup.py
Cython/Simd/: main.py  setup.py  simd_example.pyx
Cython/SimpleDemoDocker/: Dockerfile  build_and_delete.txt  main.cpp  mymodule.pyx  setup.py
Extern_C/: sample.cpp  sample.txt
FibPerformance/: fib_numba.py  main.py
FibPerformance/CPP_Fibunachi/: CMakeLists.txt  bindings.cpp  fib.cpp  fib.hpp
Numba/SimpleDemo/: numba_demo.py
Numba/WrongAndRight/: performance_demo.py
PyBind11/: CMakeLists.txt  main.cpp
Rust/Rust_Import/: call_rust.py  rustfib.rs  test_debug.sh  test_release.sh
Rust/Rust_MemoryMetters/: memory-cache.rs  test.sh
SimpleCppToPython/: main.cpp
